[gd_scene load_steps=2 format=3 uid="uid://bpd2e426bwd1p"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_6imqt"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6imqt")

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -81.5
offset_right = 67.5
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Main Menu/VBoxContainer"]
layout_mode = 2
text = "Dungeon Crawler"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="Main Menu/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="LeaderboardButton" type="Button" parent="Main Menu/VBoxContainer"]
layout_mode = 2
text = "Leaderboard"

[node name="OptionsButton" type="Button" parent="Main Menu/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="Main Menu/VBoxContainer"]
layout_mode = 2
text = "Quit"
